[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Scum.gd" type="Script" id=1]
[ext_resource path="res://Sprites/scum_scummybird_190123.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 17.0294

[sub_resource type="CircleShape2D" id=3]
radius = 19.0

[sub_resource type="CircleShape2D" id=4]
radius = 19.0263

[node name="Scum" type="KinematicBody2D"]
position = Vector2( 130, 293 )
collision_mask = 6
script = ExtResource( 1 )

[node name="ScumSprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_bottom = 0

[node name="PipeDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipeDetector"]
shape = SubResource( 3 )

[node name="PipePassDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipePassDetector"]
shape = SubResource( 4 )

[connection signal="body_entered" from="PipeDetector" to="." method="_on_PipeDetector_body_entered"]
[connection signal="area_entered" from="PipePassDetector" to="." method="_on_PipePassDetector_area_entered"]
